# Engine

./: CMakeLists.txt  TODO features  main.cpp
2DGraphics/: Renderer.cpp  Renderer.h
2DPhysics/: PhysicsEntity.cpp  PhysicsEntity.h
AssetManagement/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h
Collision/: Collidable.cpp  Collidable.h  Quadtree.h  SHash.h
Config/: Config.h  ConfigHandler.cpp  ConfigHandler.h
Core/: Entity.h
Pathfinding/: Dijkstra.cpp  Dijkstra.h
